--- a/catalog.html
+++ b/catalog.html
@@ -12,23 +12,25 @@
     <div class="page-header__elements-wrapper">
       <div class="page-header__logo">
         <a href="index.html">
-          <img class="page-header__logo-img" src="img/logo.png" alt="Mishka" width="86" height="35">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img src="img/logo-mobile.svg" width="90" height="40" alt="Mishka">
+          </picture>
         </a>
       </div>
-      <button class="main-nav__toggle" type="button">
-        <img class="main-nav__icon" src="img/hamburger.png" alt="Меню" width="20" height="14">
-      </button>
+      <button class="main-nav__toggle  main-nav__toggle--opened" type="button"></button>
       <ul class="main-nav  main-nav--grey">
-        <li class="main-nav__item  main-nav__item--border"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
+        <li class="main-nav__item  main-nav__item--border  main-nav__item--cat"><a class="main-nav__link">Каталог товаров</a></li>
+        <li class="main-nav__item  main-nav__item--order"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
       </ul>
       <ul class="main-nav  main-nav--desktop">
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Новые поступления</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Распродажа</a></li>
+        <li class="main-nav__item  main-nav__item--new"><a class="main-nav__link" href="#">Новые поступления</a></li>
+        <li class="main-nav__item  main-nav__item--sale"><a class="main-nav__link" href="#">Распродажа</a></li>
       </ul>
       <ul class="main-nav  main-nav--user">
         <li class="main-nav__item  main-nav__item--search"><a class="main-nav__link  main-nav__link--search" href="#">Поиск по сайту</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Корзина: пока пуста</a></li>
+        <li class="main-nav__item  main-nav__item--cart"><a class="main-nav__link  main-nav__link--cart" href="#">Корзина: пока пуста</a></li>
       </ul>
       <span class="page-header__text">Бесплатная доставка по России</span>
     </div>
@@ -40,7 +42,16 @@
     <h1 class="page-title  page-title--catalog">Каталог товаров</h1>
     <div class="catalog-wrapper">
       <article class="product">
-        <img class="product__img" src="img/photo-1-mobile.jpg" width="260" height="195" alt="Зайчик-попрыгайчик">
+        <picture>
+          <source media="(min-width: 1150px)"
+                  srcset="img/photo-1-desktop@1x.jpg 1x,
+                         img/photo-1-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)"
+                  srcset="img/photo-1-tablet@1x.jpg 1x,
+                          img/photo-1-tablet@2x.jpg 2x">
+          <img class="product__img" src="img/photo-1-mobile@1x.jpg" alt="Зайчик-попрыгайчик"
+               srcset="img/photo-1-mobile@2x.jpg 2x">
+        </picture>
         <div class="product__description-wrapper">
           <div class="product__text-wrapper">
             <h2 class="product__title">Зайчик-попрыгайчик</h2>
@@ -48,14 +59,21 @@
           </div>
           <div class="product__price-cart-wrapper">
             <span class="product__price">1 200 руб.</span>
-            <a class="product__cart" href="#">
-              <img class="product__cart-icon" src="img/cart.png" alt="Добавить в корзину">
-            </a>
+            <a class="product__cart" href="#">Добавить в корзину</a>
           </div>
         </div>
       </article>
       <article class="product">
-        <img class="product__img" src="img/photo-2-mobile.jpg" width="260" height="195" alt="Корзинка для белья">
+        <picture>
+          <source media="(min-width: 1150px)"
+                  srcset="img/photo-2-desktop@1x.jpg 1x,
+                         img/photo-2-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)"
+                  srcset="img/photo-2-tablet@1x.jpg 1x,
+                          img/photo-2-tablet@2x.jpg 2x">
+          <img class="product__img" src="img/photo-2-mobile@1x.jpg" alt="Корзинка для белья"
+               srcset="img/photo-2-mobile@2x.jpg 2x">
+        </picture>
         <div class="product__description-wrapper">
           <div class="product__text-wrapper">
             <h2 class="product__title">Корзинка для белья</h2>
@@ -63,14 +81,21 @@
           </div>
           <div class="product__price-cart-wrapper">
             <span class="product__price">690 руб.</span>
-            <a class="product__cart" href="#">
-              <img class="product__cart-icon" src="img/cart.png" alt="Добавить в корзину">
-            </a>
+            <a class="product__cart" href="#">Добавить в корзину</a>
           </div>
         </div>
       </article>
       <article class="product">
-        <img class="product__img" src="img/photo-3-mobile.jpg" width="260" height="195" alt="Большая корзинка для игрушек">
+        <picture>
+          <source media="(min-width: 1150px)"
+                  srcset="img/photo-3-desktop@1x.jpg 1x,
+                         img/photo-3-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)"
+                  srcset="img/photo-3-tablet@1x.jpg 1x,
+                          img/photo-3-tablet@2x.jpg 2x">
+          <img class="product__img" src="img/photo-3-mobile@1x.jpg" alt="Большая корзинка для игрушек"
+               srcset="img/photo-3-mobile@2x.jpg 2x">
+        </picture>
         <div class="product__description-wrapper">
           <div class="product__text-wrapper">
             <h2 class="product__title">Большая корзинка для игрушек</h2>
@@ -78,9 +103,7 @@
           </div>
           <div class="product__price-cart-wrapper">
             <span class="product__price">1 500 руб.</span>
-            <a class="product__cart" href="#">
-              <img class="product__cart-icon" src="img/cart.png" alt="Добавить в корзину">
-            </a>
+            <a class="product__cart" href="#">Добавить в корзину</a>
           </div>
         </div>
       </article>
@@ -88,7 +111,16 @@
     <div class="video-block">
       <div class="video-block__wrapper">
         <h1 class="video-block__title">Процесс производства</h1>
-        <img class="video-block__content" src="img/video-mobile.jpg" width="260" height="150" alt="Процесс производства">
+        <picture>
+          <source media="(min-width: 1150px)"
+                  srcset="img/video-desktop@1x.jpg 1x,
+                         img/video-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)"
+                  srcset="img/video-tablet@1x.jpg 1x,
+                          img/video-tablet@2x.jpg 2x">
+          <img class="video-block__content" src="img/video-mobile@1x.jpg" alt="Процесс производства"
+               srcset="img/video-mobile@2x.jpg 2x">
+        </picture>
         <p class="video-block__description">
           По просьбам наших любимых фолловеров
           мы сняли для вас подробное видео о том,
@@ -104,7 +136,7 @@
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <div class="footer-logo">
-        <img class="footer-logo__image" src="img/logo.png" alt="Mishka" width="86" height="35">
+        <img src="img/logo-footer.svg" width="102" height="36" alt="Mishka">
       </div>
       <ul class="social-list">
         <li class="social-list__item  social-list__item--insta">
@@ -128,14 +160,16 @@
     <form class="size-form" action="#" method="post">
       <span class="size-form__title">Добавить в корзину</span>
       <span class="size-form__subtitle">Выберите размер:</span>
-      <input class="size-form__input" type="radio" id="small" name="size" value="small" checked>
-      <label class="size-form__label" for="small">S</label>
+      <div class="size-form__input-wrapper">
+        <input class="size-form__input" type="radio" id="small" name="size" value="small" checked>
+        <label class="size-form__label  size-form__label--s" for="small">S</label>
 
-      <input class="size-form__input" type="radio" id="medium" name="size" value="medium">
-      <label class="size-form__label" for="medium">M</label>
+        <input class="size-form__input" type="radio" id="medium" name="size" value="medium">
+        <label class="size-form__label  size-form__label--m" for="medium">M</label>
 
-      <input class="size-form__input" type="radio" id="large" name="size" value="large">
-      <label class="size-form__label" for="large">L</label>
+        <input class="size-form__input" type="radio" id="large" name="size" value="large">
+        <label class="size-form__label  size-form__label--l" for="large">L</label>
+      </div>
       <button class="size-form__send" type="submit">Добавить</button>
     </form>
   </div>
