--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
   <header class="page-header">
     <div class="page-header__elements-wrapper">
       <div class="page-header__logo">
-        <img class="page-header__logo-img" src="img/logo.png" alt="Mishka" width="86" height="35">
+        <picture>
+          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img src="img/logo-mobile.svg" width="90" height="40" alt="Mishka">
+        </picture>
       </div>
-      <button class="main-nav__toggle" type="button">
-        <img class="main-nav__icon" src="img/hamburger.png" alt="Меню" width="20" height="14">
-      </button>
+      <button class="main-nav__toggle  main-nav__toggle--opened" type="button"></button>
       <ul class="main-nav  main-nav--grey">
-        <li class="main-nav__item  main-nav__item--border"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
+        <li class="main-nav__item  main-nav__item--border  main-nav__item--cat"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
+        <li class="main-nav__item  main-nav__item--order"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
       </ul>
       <ul class="main-nav  main-nav--desktop">
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Новые поступления</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Распродажа</a></li>
+        <li class="main-nav__item  main-nav__item--new"><a class="main-nav__link" href="#">Новые поступления</a></li>
+        <li class="main-nav__item  main-nav__item--sale"><a class="main-nav__link" href="#">Распродажа</a></li>
       </ul>
       <ul class="main-nav  main-nav--user">
         <li class="main-nav__item  main-nav__item--search"><a class="main-nav__link  main-nav__link--search" href="#">Поиск по сайту</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Корзина: пока пуста</a></li>
+        <li class="main-nav__item  main-nav__item--cart"><a class="main-nav__link  main-nav__link--cart" href="#">Корзина: пока пуста</a></li>
       </ul>
       <span class="page-header__text">Бесплатная доставка по России</span>
     </div>
@@ -67,18 +69,27 @@
       <table class="week-product__options-table">
         <tr class="week-product__options-table__row">
           <td class="week-product__options-table__cell">Цвет:</td>
-          <td class="week-product__options-table__cell">«Тиффани»/серый</td>
+          <td class="week-product__options-table__cell  week-product__options-table__cell--value">«Тиффани»/серый</td>
         </tr>
         <tr class="week-product__options-table__row">
           <td class="week-product__options-table__cell">Диаметр:</td>
-          <td class="week-product__options-table__cell">25 см</td>
+          <td class="week-product__options-table__cell  week-product__options-table__cell--value">25 см</td>
         </tr>
         <tr class="week-product__options-table__row">
           <td class="week-product__options-table__cell">Высота:</td>
-          <td class="week-product__options-table__cell">15 см</td>
+          <td class="week-product__options-table__cell  week-product__options-table__cell--value">15 см</td>
         </tr>
       </table>
-      <img class="week-product__img" src="img/basket.jpg" alt="Корзины ручной работы" width="260" height="315">
+      <picture>
+        <source media="(min-width: 768px)"
+                srcset="img/triple-set-tablet@1x.jpg 1x,
+                        img/triple-set-tablet@2x.jpg 2x">
+        <source media="(min-width: 1150px)"
+               srcset="img/triple-set-desktop@1x.jpg 1x,
+                       img/triple-set-desktop@2x.jpg 2x">
+        <img class="week-product__img" src="img/triple-set-mobile@1x.jpg" alt="Корзины ручной работы"
+             srcset="img/triple-set-mobile@2x.jpg 2x">
+      </picture>
       <span class="week-product__item-price">Цена: 990 руб.</span>
       <a class="week-product__order" href="#">Заказать</a>
     </section>
@@ -86,7 +97,7 @@
 
     <!-- about-us-start -->
     <section class="aboutus-block">
-      <h2 class="aboutus-block__title">Коротко о нас</h2>
+      <h2 class="aboutus-block__title">Коротко о нас:</h2>
       <ul class="aboutus-block__list">
         <li class="aboutus-block__item  aboutus-block__item--flower">Экологически чистые материалы</li>
         <li class="aboutus-block__item  aboutus-block__item--money">Скандинавский стиль по российской цене</li>
@@ -154,7 +165,7 @@
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <div class="footer-logo">
-        <img class="footer-logo__image" src="img/logo.png" alt="Mishka" width="86" height="35">
+        <img src="img/logo-footer.svg" width="102" height="36" alt="Mishka">
       </div>
       <ul class="social-list">
         <li class="social-list__item  social-list__item--insta">
@@ -169,7 +180,7 @@
       </ul>
       <address class="developer-contact">
         <span class="developer-contact__text">Разработано</span>
-        <a class="developer-contact__link" href="#">HTML Academy</a>
+        <a class="developer-contact__link" href="https://htmlacademy.ru/">HTML Academy</a>
       </address>
     </div>
   </footer>
@@ -178,14 +189,16 @@
     <form class="size-form" action="#" method="post">
       <span class="size-form__title">Добавить в корзину</span>
       <span class="size-form__subtitle">Выберите размер:</span>
-      <input class="size-form__input" type="radio" id="small" name="size" value="small" checked>
-      <label class="size-form__label" for="small">S</label>
+      <div class="size-form__input-wrapper">
+        <input class="size-form__input" type="radio" id="small" name="size" value="small" checked>
+        <label class="size-form__label  size-form__label--s" for="small">S</label>
 
-      <input class="size-form__input" type="radio" id="medium" name="size" value="medium">
-      <label class="size-form__label" for="medium">M</label>
+        <input class="size-form__input" type="radio" id="medium" name="size" value="medium">
+        <label class="size-form__label  size-form__label--m" for="medium">M</label>
 
-      <input class="size-form__input" type="radio" id="large" name="size" value="large">
-      <label class="size-form__label" for="large">L</label>
+        <input class="size-form__input" type="radio" id="large" name="size" value="large">
+        <label class="size-form__label  size-form__label--l" for="large">L</label>
+      </div>
       <button class="size-form__send" type="submit">Добавить</button>
     </form>
   </div>
